--- a/html/css/common_02.css
+++ b/html/css/common_02.css
@@ -759,6 +759,7 @@
     background-color: #AEB7C6;
     transform: translate(-50%, -50%);
 }
+
 .tree-menu-wrap .tree-list .haschildren button::after {
     content: '';
     width:1px;
@@ -771,6 +772,42 @@
     transform: translate(-50%, -50%);
 }
 .tree-menu-wrap .tree-list .haschildren button.is-active::after {
+    display: none;
+}
+
+.two-depth-button i {
+    border: 1px solid #E1E3E9;
+    width: 20px;
+    height: 20px;
+    position: relative;
+    border-radius: 3px;
+    display: inline-block;
+    background: #fff;
+    padding: 0;
+}
+.two-depth-button i::before {
+    content: '';
+    width:10px;
+    height: 1px;
+    display: block;
+    position: absolute;
+    left: 50%;
+    top:50%;
+    background-color: #AEB7C6;
+    transform: translate(-50%, -50%);
+}  
+.two-depth-button i::after {
+    content: '';
+    width:1px;
+    height: 10px;
+    display: block;
+    position: absolute;
+    left: 50%;
+    top:50%;
+    background-color: #AEB7C6;
+    transform: translate(-50%, -50%);
+}
+.two-depth-button.is-active i::after {
     display: none;
 }
 .tree-tab-head {
